# smtp-gmail-relay

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
smtp_gmail_relay/: __init__.py  server.py
