[tool.poetry]
name = "smtp-gmail-relay"
version = "0.1.0"
description = ""
authors = ["Miguel Lobato <miguel.lobato@new-work.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiosmtpd = "^1.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
